Set the focus of the text field

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ $(function() {
 </style>
 </head>
 
-<body>
+<body onLoad="document.submitted.currentPoints.focus();">
 <h2>Points Calculator</h2>
 	<table>
 	<tr>
